@@ -1,5 +1,9 @@
 Revision history for Perl extension Cache::Bounded.
 
+VERSIONTAG  DATETAG
+
+	Added a publically accessible purge() method.
+
 1.03  2004/04/06
 
 	Fixed class related bug where interval and size could not be set.
